--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/Docks
+spring.datasource.url=jdbc:postgresql://localhost:5432/Docs
 spring.datasource.username=postgres
 spring.datasource.password=postgres
+spring.jpa.show-sql=false
+spring.jpa.hibernate.ddl-auto=create
