--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,8 @@ spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=validate
+
+auth.AuthRules.minPasswordLength=5
+auth.AuthRules.maxPasswordLength=256
+auth.AuthRules.minLoginLength=5
+auth.AuthRules.maxLoginLength=256
