--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,13 @@ auth.AuthRules.minPasswordLength=5
 auth.AuthRules.maxPasswordLength=256
 auth.AuthRules.minLoginLength=5
 auth.AuthRules.maxLoginLength=256
+
+exception.DocNotFound.message = doc not found
+exception.UserNotFound.message = user not found
+exception.NotAuthorized.message = not authorized
+
+exception.ParseException.message = parse exception
+exception.NullPointerException.message = null pointer exception
+exception.IOException.message = io exception
+exception.NotAuthorizedException.message = not authorized
+exception.PropertyReferenceException.message = property not exists
