--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,4 @@ exception.NullPointerException.message = null pointer exception
 exception.IOException.message = io exception
 exception.NotAuthorizedException.message = not authorized
 exception.PropertyReferenceException.message = property not exists
+exception.JSONExceptionMessage.message = incorrect filter
